
Oops^2.
----------------------------------------------------------------------
Mon Jun  6 13:23:14 2011                        Michael Jennings (mej)

Compatibility for RHEL5 autoconf.
----------------------------------------------------------------------
Mon Jun  6 17:21:52 2011                        Michael Jennings (mej)

Ignore files cleaned by "make maintainer-clean"
----------------------------------------------------------------------
Mon Jul 18 15:49:53 2011                        Michael Jennings (mej)

Fix usage of svnversion since it no longer errors properly.
----------------------------------------------------------------------
Tue Jul 19 14:32:41 2011                        Michael Jennings (mej)

Replace use of Digest::file with Digest::MD5.
----------------------------------------------------------------------
Tue Aug  2 15:27:47 2011                        Michael Jennings (mej)

Cleanups, documentation fixes, etc. for the top-level modules.  Still
need to work through the hierarchy.  None of these changes should
affect functionality, but they still need thorough testing anyway.
----------------------------------------------------------------------
Wed Aug  3 17:05:31 2011                        Michael Jennings (mej)

Further cleanups and a few functional corrections vetted with gmk.
----------------------------------------------------------------------
Fri Aug  5 16:15:11 2011                        Michael Jennings (mej)

Add ObjectSet::del() method to remove objects from sets.
----------------------------------------------------------------------
Fri Aug  5 18:43:51 2011                        Michael Jennings (mej)

Initial testing framework.  Doesn't test much yet, but it's a start.
Eventually I'd like to achieve complete coverage, at least on the
modules, but that will take some time.  Use "make test" to run the
tests.
----------------------------------------------------------------------