@@ -1,0 +1,20 @@
+# This is a test configuration file
+     # Leading whitespace shouldn't matter.
+simple = test
+some key = some value
+
+other key = other value   # This should be stripped also.
+
+test list = val1, val2 ,, , "value 3" 'value four,',,,,,val5           val6
+
+continuation = first\ line
+    "second line"
+
+# The following line intentionally contains whitespace.
+                                               
+
+list += one
+list += two
+list += three
+        four
+list += five
