@@ -183,3 +183,9 @@ Eventually I'd like to achieve complete coverage, at least on the
 modules, but that will take some time.  Use "make test" to run the
 tests.
 ----------------------------------------------------------------------
+Wed Aug 10 17:49:32 2011                        Michael Jennings (mej)
+
+WORK IN PROGRESS:  Config.pm rewrite and unit tests.
+
+This WILL BREAK existing config files, so don't try to use it yet!
+----------------------------------------------------------------------
